--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<h1>Morena Votos Cruzados, Hermosillo 2024</h1>
+<h1>Morena Votos Cruzados, Alcalde / Federal, Hermosillo 2024</h1>
 <head>
 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
