--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
     <!-- Tab Navigation -->
     <div class="tab-container">
-        <div class="tab" onclick="openTab('map0')">Vother Participacion</div>
-        <div class="tab active" onclick="openTab('map1')">Alcalde / Federal</div>
+        <div class="tab active" onclick="openTab('map0')">Vother Participacion</div>
+        <div class="tab" onclick="openTab('map1')">Alcalde / Federal</div>
         <div class="tab" onclick="openTab('map2')">Alcalde / Diputatos</div>
     </div>
 
