--- a/index.html
+++ b/index.html
@@ -56,30 +56,30 @@
 </head>
 <body>
 
-    <h1>Cross-Voting in Hermosillo, 2024</h1>
+    <h1>Voto Cruzado, Hermosillo 2024</h1>
 
     <!-- Tab Navigation -->
     <div class="tab-container">
-        <div class="tab active" onclick="openTab('map0')">Vother Participacion</div>
-        <div class="tab" onclick="openTab('map1')">Alcalde / Federal</div>
-        <div class="tab" onclick="openTab('map2')">Alcalde / Diputatos</div>
+        <div class="tab active" onclick="openTab('map0')">Participación electoral</div>
+        <div class="tab" onclick="openTab('map1')">Alcalde / Presidenta</div>
+        <div class="tab" onclick="openTab('map2')">Alcalde / Diputatos Locales</div>
     </div>
 
     <!-- Tab Content with iframes loading the Folium maps -->
     <div id="map0" class="tab-content active">
         <div class="map-container">
-            <iframe src="Hermosillo_voter_participation_2024.html" title="Voter Participacion"></iframe>
+            <iframe src="Hermosillo_voter_participation_2024.html" title="Participación electoral"></iframe>
         </div>
     </div>
 
     <div id="map1" class="tab-content">
         <div class="map-container">
-            <iframe src="Hermosillo_cross-voting_2024.html" title="Alcalde / Federal"></iframe>
+            <iframe src="Hermosillo_cross-voting_2024.html" title="Alcalde / Presidenta"></iframe>
         </div>
     </div>
     <div id="map2" class="tab-content">
         <div class="map-container">
-            <iframe src="Hermosillo_cross-voting_2024-dip.html" title="Alcalde / Diputatos"></iframe>
+            <iframe src="Hermosillo_cross-voting_2024-dip.html" title="Alcalde / Diputatos Locales"></iframe>
         </div>
     </div>
 
