--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <!-- Tab Navigation -->
     <div class="tab-container">
         <div class="tab active" onclick="openTab('map0')">Participación electoral</div>
-        <div class="tab" onclick="openTab('map1')">Alcalde / Presidenta</div>
-        <div class="tab" onclick="openTab('map2')">Alcalde / Diputatos Locales</div>
+        <div class="tab" onclick="openTab('map1')">Presidenta - Alcalde</div>
+        <div class="tab" onclick="openTab('map2')">Diputatos Locales - Alcalde</div>
     </div>
 
     <!-- Tab Content with iframes loading the Folium maps -->
@@ -74,12 +74,12 @@
 
     <div id="map1" class="tab-content">
         <div class="map-container">
-            <iframe src="Hermosillo_cross-voting_2024.html" title="Alcalde / Presidenta"></iframe>
+            <iframe src="Hermosillo_cross-voting_2024.html" title="Presidenta - Alcalde"></iframe>
         </div>
     </div>
     <div id="map2" class="tab-content">
         <div class="map-container">
-            <iframe src="Hermosillo_cross-voting_2024-dip.html" title="Alcalde / Diputatos Locales"></iframe>
+            <iframe src="Hermosillo_cross-voting_2024-dip.html" title="Diputatos Locales - Alcalde"></iframe>
         </div>
     </div>
 
